

syntax = "proto3";

package spilot.api.v1;

option go_package = "gen/api/v1";


message LogResponse{

}

message LogRequest{}

service LogService {
	rpc GetLogs(LogRequest) returns (LogRequest){}
  }